# hs-test-python

./: .flake8  .gitattributes  .gitignore  Dockerfile  README.md  mypy.ini  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  testing.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/py3.10/: action.yml
.github/actions/py3.6/: action.yml
.github/actions/py3.7/: action.yml
.github/actions/py3.8/: action.yml
.github/actions/py3.9/: action.yml
.github/workflows/: auto-author-assign.yml  auto-format.yml  build-wheels.yml  ci.yml  main.yml
hstest/: __init__.py  check_result.py  django_test.py  exceptions.py  outcomes.py  stage_test.py  test_case.py  test_helper.py  test_run.py  utils.py
hstest/common/: file_utils.py  os_utils.py  process_utils.py  reflection_utils.py  utils.py
hstest/dynamic/: dynamic_test.py  file_searcher.py  handle.py  handle_exit.py  handle_stdin.py  handle_stdout.py  stdin.py  stdout.py  system_handler.py
hstest/dynamic/input/: dynamic_input_func.py  dynamic_input_handler.py  dynamic_testing.py  input_handler.py  input_mock.py
hstest/dynamic/output/: colored_output.py  infinite_loop_detector.py  output_handler.py  output_mock.py
hstest/dynamic/security/: exit_exception.py  exit_handler.py  thread_group.py  thread_handler.py
hstest/exception/: failure_handler.py  outcomes.py  testing.py
hstest/lib_version_validator/: github_releases.py  installed_version.py  library_version_validator.py
hstest/outcomes/: compilation_error_outcome.py  error_outcome.py  exception_outcome.py  outcome.py  unexpected_error_outcome.py  wrong_answer_outcome.py
hstest/stage/: __init__.py  django_test.py  flask_test.py  matplotlib_test.py  plotting_test.py  sql_test.py  stage_test.py
hstest/stage_test/: __init__.py  django_test.py  stage_test.py
hstest/test_case/: __init__.py  check_result.py  test_case.py
hstest/test_case/attach/: django_settings.py  flask_settings.py
hstest/testing/: execution_options.py  popen_wrapper.py  process_wrapper.py  settings.py  state_machine.py  test_run.py  tested_program.py
hstest/testing/database_connector/: postgresql_connector.py  sqlite_connector.py
hstest/testing/execution/: main_file_executor.py  main_module_executor.py  process_executor.py  program_executor.py  runnable_file.py
hstest/testing/plotting/: drawing.py  drawing_data_normalizer.py  matplotlib_handler.py  pandas_handler.py  seaborn_handler.py
hstest/testing/plt_hack/: __init__.py  drawing.py  hack_matplotlib.py  hack_pandas.py  hack_seaborn.py
hstest/testing/runner/: async_dynamic_testing_runner.py  async_main_file_runner.py  conftest.py  django_application_runner.py  flask_application_runner.py  plot_testing_runner.py  sql_runner.py  test_runner.py
hstest/testing/unittest/: expected_fail_test.py  unexepected_error_test.py  user_error_test.py
tests/: conftest.py  test_check_result.py  test_testcase.py  testing.py
tests/base/: expected_fail_test.py  unexepected_error_test.py  user_error_test.py
tests/outcomes/base/: unexepected_error_test.py  user_error_test.py
tests/outcomes/exception_in_user_code/: program.py  test.py
tests/outcomes/exception_in_user_code_2/: test.py
tests/outcomes/exception_while_reading/: program.py  test.py
tests/outcomes/exception_while_reading_2/: test.py
tests/outcomes/fatal_error_add_input_1/: test.py
tests/outcomes/fatal_error_add_input_2/: test.py
tests/outcomes/fatal_error_add_input_3/: test.py
tests/outcomes/fatal_error_during_checking/: test.py
tests/outcomes/fatal_error_during_checking_with_assertion/: test.py
tests/outcomes/fatal_error_empty_test_cases/: test.py
tests/outcomes/fatal_error_generating_tests/: test.py
tests/outcomes/fatal_error_generating_tests_with_assertion/: test.py
tests/outcomes/fatal_error_no_check_method/: test.py
tests/outcomes/fatal_error_not_generating_tests/: test.py
tests/outcomes/fatal_error_runtime_exit_in_check/: program.py  test.py
tests/outcomes/fatal_error_runtime_exit_in_dynamic_input/: test.py
tests/outcomes/fatal_error_runtime_exit_in_generate/: test.py
tests/outcomes/feedback_on_exception_test_1/: program.py  test.py
tests/outcomes/feedback_on_exception_test_2/: program.py  test.py
tests/outcomes/feedback_on_exception_test_3/: test.py
tests/outcomes/feedback_on_exception_test_4/: test.py
tests/outcomes/feedback_on_exception_test_5/: test.py
tests/outcomes/plot/: universal_test.py
tests/outcomes/success/: test.py
tests/outcomes/success_but_not_used_input/: test.py
tests/outcomes/success_but_not_used_input_1/: program.py  test.py
tests/outcomes/success_but_not_used_input_2/: test.py
tests/outcomes/success_dynamic_input/: test.py
tests/outcomes/test_case_same_objects/: program.py  test.py
tests/outcomes/test_command_line_arguments_passing/: test.py
tests/outcomes/test_copy_to_attach/: program.py  test.py
tests/outcomes/test_curr_test_case/: test.py
tests/outcomes/test_curr_test_num/: test.py
tests/outcomes/test_custom_checker/: test.py
tests/outcomes/test_custom_checker_fail/: test.py
tests/outcomes/test_default_time_limit/: test.py
tests/outcomes/test_dynamic_input/: program.py  test.py
tests/outcomes/test_dynamic_output/: program.py  test.py
tests/outcomes/test_dynamic_output_with_input/: test.py
tests/outcomes/test_dynamic_output_without_input/: program.py  test.py
tests/outcomes/test_multiple_dynamic_inputs/: test.py
tests/outcomes/test_nbsp_in_output/: program.py  test.py
tests/outcomes/test_no_time_limit/: test.py
tests/outcomes/test_not_run_not_needed_input_funcs/: test.py
tests/outcomes/test_open_file_and_not_close/: program.py  test.py
tests/outcomes/test_out_of_input_1/: test.py
tests/outcomes/test_out_of_input_2/: test.py
tests/outcomes/test_out_of_input_3/: test.py
tests/outcomes/test_out_of_input_4/: program.py  test.py
tests/outcomes/test_passed_thrown_in_check_1/: test.py
tests/outcomes/test_passed_thrown_in_check_2/: test.py
tests/outcomes/test_passed_thrown_in_dynamic_input_1/: test.py
(+787 files in other folders)
